--- a/README.adoc
+++ b/README.adoc
@@ -13,7 +13,7 @@ With Maven, you need to import the BOM first:
 		<dependency>
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-bom</artifactId>
-			<version>Apple-RELEASE</version>
+			<version>Apple-SR1</version>
 			<type>pom</type>
 			<scope>import</scope>
 		</dependency>
@@ -54,7 +54,7 @@ Then use it to import the BOM:
 ----
 dependencyManagement {
 	imports {
-		mavenBom 'org.springframework.session:spring-session-bom:Apple-RELEASE'
+		mavenBom 'org.springframework.session:spring-session-bom:Apple-SR1'
 	}
 }
 ----
