Add code of conduct

--- a/README.adoc
+++ b/README.adoc
@@ -79,6 +79,11 @@ dependencies {
 }
 ----
 
+== Code of Conduct
+
+This project adheres to the Contributor Covenant link:CODE_OF_CONDUCT.adoc[code of conduct].
+By participating, you  are expected to uphold this code. Please report unacceptable behavior to spring-code-of-conduct@pivotal.io.
+
 == Spring Session Project Site
 
 You can find the documentation, issue management, support, samples, and guides for using Spring Session at https://projects.spring.io/spring-session/.
